--- a/.github/workflows/manual.yaml
+++ b/.github/workflows/manual.yaml
@@ -34,6 +34,7 @@ jobs:
         with:
           push: true
           context: .
+          platforms: linux/amd64,linux/arm64
           tags: eyeballapp/php:8.2,eyeballapp/php:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
