--- a/overrides.conf
+++ b/overrides.conf
@@ -19,3 +19,10 @@ catch_workers_output = yes
 decorate_workers_output = no
 
 clear_env = no
+
+pm = ondemand
+
+pm.max_children = 80
+pm.process_idle_timeout = 10s
+
+pm.max_requests = 1000
