--- a/.github/workflows/manual.yaml
+++ b/.github/workflows/manual.yaml
@@ -41,6 +41,18 @@ jobs:
           cache-to: type=gha,mode=max
 
       - 
+        name: Build & Push Dev 8.3
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          context: .
+          file: Dockerfile.php8.3
+          platforms: linux/amd64,linux/arm64
+          tags: eyeballapp/php:8.3,eyeballapp/php:beta
+          build-args: |
+            NO_CACHE=true
+
+      - 
         name: Build & Push Prod
         uses: docker/build-push-action@v3
         with:
