--- a/.github/workflows/manual.yaml
+++ b/.github/workflows/manual.yaml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - 
+      -
         name: Checkout
         uses: actions/checkout@v3
 
@@ -21,14 +21,14 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - 
+      -
         name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - 
+      -
         name: Build & Push Dev
         uses: docker/build-push-action@v3
         with:
@@ -40,7 +40,7 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - 
+      -
         name: Build & Push Dev 8.3
         uses: docker/build-push-action@v3
         with:
@@ -52,7 +52,19 @@ jobs:
           build-args: |
             NO_CACHE=true
 
-      - 
+      -
+        name: Build & Push Dev 8.4
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          context: .
+          file: Dockerfile.php8.4
+          platforms: linux/amd64,linux/arm64
+          tags: eyeballapp/php-dev:8.4,eyeballapp/php-dev:beta
+          build-args: |
+            NO_CACHE=true
+
+      -
         name: Build & Push Prod
         uses: docker/build-push-action@v3
         with:
