updated php-excimer, added php version to config

--- a/Dockerfile.php8.3
+++ b/Dockerfile.php8.3
@@ -12,7 +12,7 @@ RUN apt-get update \
         ca-certificates \
         curl \
         unzip \
-        git \ 
+        git \
         wget \
         nano \
         vim \
@@ -27,16 +27,16 @@ RUN apt-get update \
         php8.3-xml \
         php8.3-zip \
         php8.3-gd \
-        php8.3-bcmath \ 
-        php8.3-igbinary \ 
-        php8.3-imagick \ 
-        php8.3-intl \ 
-        php8.3-mysql \ 
-        php8.3-redis \ 
-        php8.3-soap \ 
-        php8.3-sqlite3 \ 
+        php8.3-bcmath \
+        php8.3-igbinary \
+        php8.3-imagick \
+        php8.3-intl \
+        php8.3-mysql \
+        php8.3-redis \
+        php8.3-soap \
+        php8.3-sqlite3 \
         php8.3-fpm \
-        php-excimer \
+        php8.3-excimer \
     && apt-get clean
 
 # Backup the original file
