--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -12,7 +12,7 @@ RUN apt-get update \
         ca-certificates \
         curl \
         unzip \
-        git \ 
+        git \
         wget \
         nano \
         vim \
@@ -27,16 +27,16 @@ RUN apt-get update \
         php8.2-xml \
         php8.2-zip \
         php8.2-gd \
-        php8.2-bcmath \ 
-        php8.2-igbinary \ 
-        php8.2-imagick \ 
-        php8.2-intl \ 
-        php8.2-mysql \ 
-        php8.2-redis \ 
-        php8.2-soap \ 
-        php8.2-sqlite3 \ 
+        php8.2-bcmath \
+        php8.2-igbinary \
+        php8.2-imagick \
+        php8.2-intl \
+        php8.2-mysql \
+        php8.2-redis \
+        php8.2-soap \
+        php8.2-sqlite3 \
         php8.2-fpm \
-        php-excimer \
+        php8.2-excimer \
     && apt-get clean
 
 # Backup the original file
